--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,26 +1,34 @@
-body { 
-	margin:0; 
-	padding:0; 
-	height:100%; 
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#map_canvas {
+    height: 100%;
 }
 
 #sidebar {
-	font-family:"Verdana";
-	text-align: center;
-	position: absolute; 
-	right: 0; 
-	top: 0; 
-	padding: 0; 
-	width: 30%; 
-	height: 100%;
-	background-color: black; 
-	border: 0px; 
+    font-family:"Verdana";
+    text-align: center;
+    position: absolute; 
+    right: 0; 
+    top: 0; 
+    padding: 0; 
+    width: 30%; 
+    height: 100%;
+    background-color: black; 
+    border: 0px; 
 }
 
 #title {
-	position: absolute;
-	margin-left: auto;
+    position: absolute;
+    margin-left: auto;
     margin-right: auto;
 
-	color:#ffffff;
+    color:#ffffff;
 }
