--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,20 +10,15 @@ body {
 
 #map_canvas {
     height: 100%;
+    width: 100%;
     float: left;
 }
 
 #sidebar {
-    font-family:"Verdana";
-    text-align: center;
-    position: absolute; 
-    right: 0; 
-    top: 0; 
-    padding: 0; 
-    width: 200px; 
+    float: right;
+    width: 300px; 
     height: 100%;
     background-color: black; 
-    border: 0px; 
 }
 
 #title {
