--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,6 +4,8 @@ html {
 
 body {
     height: 100%;
+    font-family: "Verdana", sans-serif;
+    font-size: 1.1em;
     margin: 0;
     padding: 0;
 }
@@ -29,11 +31,37 @@ body {
     right: 0px;
     height: 100%;
     background-color: #333; 
+    color: #fff;
 }
 
-#title {
-    margin-left: auto;
-    margin-right: auto;
-
-    color:#ffffff;
+#sidebar-content {
+    padding: 15px;
 }
+
+#filters {
+    padding: 0px;
+}
+
+#filters li:first-child {
+    border-top: 1px dashed #999;
+}
+
+#filters li {
+    list-style-type: none;
+    margin: 0px;
+    border-bottom: 1px dashed #999;
+}
+
+#filters li label {
+    font-size: 1.2em;
+    width: 100%;
+    display: inline-block;
+    padding: 20px 10px;
+    background-color: #444;
+    cursor: pointer;
+}
+
+#filters li label:hover {
+    background-color: #555;
+}
+
