--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -18,7 +18,8 @@ body {
 }
 
 #map_wrapper {
-    margin-right: 300px;
+    /*margin-right: 300px;*/
+    margin-left: 300px;
     height: 100%;
 }
 
@@ -32,7 +33,8 @@ body {
     width: 300px; 
     position: absolute;
     top: 0px;
-    right: 0px;
+    /*right: 0px;*/
+    left: 0px;
     height: 100%;
     background-color: #333;
     color: #fff;
