--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,13 +19,45 @@ body {
 
 #map_wrapper {
     margin-right: 400px;
-    margin-left: 300px;
+    margin-top:40px;
+    /*margin-left: 300px;*/
     height: 100%;
 }
 
 #map_canvas {
     width: 100%;
     height: 100%;
+}
+
+#topbar {
+    font-family: 'Petrona', serif;
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: #222;
+    color: #fff;
+}
+
+#topbar_text {
+    position:relative;
+    left:10px;
+    top:10px;
+    
+}
+
+#search {
+    margin: 0px 0px 0px 0px; 
+    display:inline;
+    position:relative;
+    top: 2px;
+}
+
+#topbar_right {
+    position:absolute;
+    right:10px;
+    top: 5px;
 }
 
 #sidebar {
@@ -46,6 +78,7 @@ body {
     font-family: 'Petrona', serif;
     width: 400px; 
     position: absolute;
+    margin-top:40px;
     top: 0px;
     right: 0px;
     /*left: 0px;*/
